--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Sign Up</h1>
-	<form method="post" action="/signup">
+	<form method="POST" action="/signup">
 		<label for="username">Username:</label>
 		<input type="text" id="username" name="username"><br><br>
 		<label for="password">Password:</label>
